--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             </div>
 
             <div class=" col-lg-4  col-sm-12 col-xs-12 ">
-                <p class=" texto "> Los herederos de Baden Powell nace de dos rovers con ganas de servir al prójimo, con exelentes productos impresos con tecnologia 3D, con la mejor calidad que podamos ofrecer, dejando al mundo en mejores condiciones de que lo encontramos, utilizando productos con bajo impacto en el medio ambiente</p>
+                <p class=" texto grande"> Los herederos de Baden Powell nace de dos rovers con ganas de servir al prójimo, con exelentes productos impresos con tecnologia 3D, con la mejor calidad que podamos ofrecer, dejando al mundo en mejores condiciones de que lo encontramos, utilizando productos con bajo impacto en el medio ambiente</p>
             </div>
 
             <div class=" col-lg-4 col-sm-12  col-xs-12">
