--- a/pages/devolucion.html
+++ b/pages/devolucion.html
@@ -30,7 +30,7 @@
         <div class="col containerDiv">
             <h2 class="titulo col-lg-6 col-sm-12 col-xs-12">Cambios</h2> 
            
-            <p class="texto  col-lg-6 col-sm-12 col-xs-12">
+            <p class="texto grande col-lg-6 col-sm-12 col-xs-12">
                 Para coordinar un cambio contactanos 
                 a nuestro Instagram @LosHerederosDeBP y te responderemos a la brevedad.
                 El costo de envío y reenvío estarán a cargo del cliente, 
@@ -40,7 +40,7 @@
         <div class=" col containerDiv">
             <h2 class="titulo  col-lg-6 col-sm-12 col-xs-12">Devoluciones</h2>
            
-            <p class="texto">
+            <p class="texto grande">
                 Devoluciones: Si el producto tiene alguna falla o no se corresponde con el producto que seleccionaste,
                 comunicate con nosotros dentro de las 48 horas hábiles de recibida tu compra al +54 9 11 3498-8998 o
                 por mail a lhdbp@gmail.com. Conserva siempre las etiquetas y packaging originales y el ticket de compra.
